# BezierSurfaceDistance

./: .cproject  .project  CMakeCache.txt  CMakeLists.txt  HeartValveModel  HeartValveModel.cbp  Makefile  Model.cpp  Model.h  Notes.txt  README.md  bezier.cpp  bezier.h  cmake_install.cmake  cuda_macros.h  input.txt  main.cpp  main.cu  matplotlibcpp.h  model.cpp  model.h  parallel.cpp  parameters.h  plotting.cpp  plotting.h  test.cu
CUDA_translation/: bottom_parametric_functions.cu  gpumodel.h  main.cu  top_parametric_functions.cu  vec3d.cu  vec3d.h
bezier/: bezier.h  bicubicsrf.cpp  bicubicsrf.h  cubiccrv.cpp  cubiccrv.h
geometry/curve/: cubiccrv.cpp  cubiccrv.h  curve.cpp  curve.h
geometry/maths/: vec3d.cpp  vec3d.h
geometry/surface/: BezierSurface.h  BottomParametric.cpp  BottomParametric.h  TopParametric.cpp  TopParametric.h  bicubicsrf.cpp  bicubicsrf.h  compositeBicubicsrf.cpp  compositeBicubicsrf.h  surface.cpp  surface.h
geometry/vector/: vec3d.cpp  vec3d.h
maths/: vec3d.cpp  vec3d.h
measurements/: measurements.cpp  measurements.h
old_code/: GeometricProjection.h  GeometricProjectionSur.h  Newton1D.cpp  Newton1D.h  Newton2D.h  bezier.cpp  old_main.cpp  parallel.cpp  parallel.cu  plotting.cpp  plotting.h  vectorMath.cpp  vectorMath.h
optimizer/: optimizer.cpp  optimizer.h
optimizer/preprocessor/: bisection.cpp  bisection.h  preprocessor.h  quadraticInterpolation.cpp  quadraticInterpolation.h
plotting/: plotting.cpp  plotting.h
splittingAlgorithm/: splittingAlgorithm.cpp  splittingAlgorithm.h
test/: GeometricProjection.cpp  GeometricProjection.h  GeometricProjectionSur.cpp  GeometricProjectionSur.h  Newton1D.h  Newton2D.cpp  Newton2D.h
(+7 files in other folders)
